--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.cloud.gateway.discovery.locator.enabled=true
 # with you can access application with extra url app name
 #http://localhost:8765/CURRENCY-EXCHANGE/currency-exchange/from/USD/to/INR
 #Capital app name CURRENCY-EXCHANGE is extra over here
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#for the lowercase app
+
+
