--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.cloud.gateway.discovery.locator.enabled=true
 #Capital app name CURRENCY-EXCHANGE is extra over here
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 #for the lowercase app
+spring.sleuth.sampler.probability=1.0
 
 
